# Cingulata

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile.bfv  Dockerfile.common  Dockerfile.tfhe  LICENSE.txt  README.md
common/: CMakeLists.txt
common/include/: bit_exec_man.hxx  ci_bit.hxx  ci_bit_vector.hxx  ci_context.hxx  ci_fncs.hxx  ci_int-impl.hxx  ci_int.hxx  ci_int_defs.cxx  ci_int_fncs.hxx  ci_slice-impl.hxx  ci_slice.hxx  io_name_vec.hxx  logging.hxx  slice.hxx  utils.hxx
common/include/bit_exec/: allocator.hxx  bit_tracker.hxx  clear.hxx  interface.hxx  interface_fhe.hxx  interface_she.hxx  mem_man_basic.hxx  obj_handle.hxx  stat.hxx  stat_deco.hxx  tfhe_exec.hxx  tracker.hxx
common/include/int_op_gen/: interface.hxx  interface_defs.cxx  mult_depth.hxx  size.hxx
common/src/: CMakeLists.txt  ci_bit.cxx  ci_bit_vector.cxx  ci_context.cxx  ci_fncs.cxx  ci_int.cxx  ci_int_fncs.cxx  slice.cxx
common/src/bit_exec/: bit_tracker.cxx  clear.cxx  interface.cxx  interface_she.cxx  tfhe_bit_exec.cxx  tfhe_exec.cxx  tracker.cxx
common/src/int_op_gen/: interface.cxx  mult_depth.cxx  size.cxx
common/test/: CMakeLists.txt  simple_test.cxx  test_cpp_oper.cxx
common/test/unittest/: bit_exec_plain.hxx  test_ci_bit.cxx  test_ci_bit_pt.cxx  test_ci_bit_vector.cxx  test_ci_int.cxx  test_int_op_gen_impl.cxx  test_io_name_vec.cxx  test_main.cxx
optim/: utils.py  (+5 more)
runtime/: CMakeLists.txt
runtime/dyn_omp/: CMakeLists.txt
runtime/dyn_omp/include/: blif_circuit.hxx  homomorphic_executor.hxx  priority.hxx  scheduler.hxx
runtime/dyn_omp/src/: CMakeLists.txt  blif_circuit.cxx  dyn_omp.cxx  homomorphic_executor.cxx  priority.cxx  scheduler.cxx
runtime/fhe_apps/: CMakeLists.txt
runtime/fhe_apps/src/: CMakeLists.txt  blif_exec.cxx  decrypt.cxx  encrypt.cxx  generate_keys.cxx  helper.cxx  pack.cxx
runtime/fhe_fv/: CMakeLists.txt
runtime/fhe_fv/cmake/: FindFLINT.cmake  FindGMP.cmake  FindMPFR.cmake
runtime/fhe_fv/include/: bfv_bit_exec.hxx  ciphertext.hxx  encdec.hxx  fhe_params.hxx  fv.hxx  keygen.hxx  keys_all.hxx  keys_share.hxx  normal.hxx  polyring.hxx  public_key.hxx  rand_polynom.hxx  secret_key.hxx  uniform.hxx
runtime/fhe_fv/script/: CMakeLists.txt  README.md  genParams.py  selectParams.sh  selectParams.sh.in
runtime/fhe_fv/src/: CMakeLists.txt  bfv_bit_exec.cxx  ciphertext.cxx  encdec.cxx  fhe_params.cxx  keygen.cxx  keys_all.cxx  keys_share.cxx  normal.cxx  polyring.cxx  public_key.cxx  rand_polynom.cxx  secret_key.cxx  uniform.cxx
runtime/tfhe/: CMakeLists.txt
runtime/tfhe/include/: tfhe_bit_exec.hxx
runtime/tfhe/src/: keygen.cxx  tfhe_bit_exec.cxx
submodules/: CMakeLists.txt
tests/: CMakeLists.txt
tests/ASCII/: ASCII.cxx  CMakeLists.txt  README.md  search_fixed_length.sh.in  search_max_length.sh.in
tests/ASCII/plaintext/: countries  countries10  countries11  countries12  countries13  countries15  countries16  countries4  countries5  countries7  countries8  sorted_countries
tests/add/: CMakeLists.txt  add_circuit.cxx  add_main.cxx  cingulata_tools.cxx  cingulata_tools.hxx
tests/bfv/: CMakeLists.txt
tests/bfv/ASCII/: CMakeLists.txt  search_fixed_length.sh.in  search_max_length.sh.in
tests/bfv/cardio/: CMakeLists.txt  README.md  cardio.cxx  run.sh.in
tests/bfv/flip/: CMakeLists.txt  run.sh.in
tests/bfv/hello/: CMakeLists.txt  hello.cxx  run.sh.in
tests/bfv/ipv4/: CMakeLists.txt  run.sh.in
tests/bfv/ipv6/: CMakeLists.txt  run.sh.in
tests/bfv/kreyvium/: CMakeLists.txt  run.sh.in
tests/bfv/membership/: CMakeLists.txt  README.md  run.sh.in
tests/bfv/membership-partial/: 1234.sh.in  234.sh.in  34.sh.in  4.sh.in  CMakeLists.txt  README.md
tests/bfv/multiplicity/: CMakeLists.txt  README.md  run.sh.in
tests/bfv/trivium/: CMakeLists.txt  run.sh.in
tests/bfv/wiretap/: CMakeLists.txt  run.sh.in  wiretap.cxx
tests/cardio/: CMakeLists.txt  README.md  cardio.cxx  run.sh  run.sh.in
tests/flip/: CMakeLists.txt  aes.c  flip.cxx  ref.txt  run.sh
tests/hello/: CMakeLists.txt  README.md  hello.cxx  run.sh  run.sh.in
tests/intersection/: CMakeLists.txt  README.md  intersection.cxx  run.sh.in
tests/ipv4/: CMakeLists.txt  README.md  ipv4.cxx  run.sh  run.sh.in
tests/ipv6/: CMakeLists.txt  README.md  ipv6.cxx  run.sh  run.sh.in
tests/kreyvium/: CMakeLists.txt  kreyvium.cxx  run.sh  run.sh.in
tests/membership/: CMakeLists.txt  membership.cxx  run.sh.in
tests/membership-partial/: 1234.sh.in  4.sh.in  CMakeLists.txt  README.md  membership-partial.cxx
tests/multiplicity/: CMakeLists.txt  multiplicity.cxx  run.sh.in
tests/old/: CMakeLists.txt
tests/old/ASCII/: CMakeLists.txt  search_fixed_length.sh.in  search_max_length.sh.in
tests/old/flip/: CMakeLists.txt  README.md  aes.c  run.sh.in
tests/old/intersection/: CMakeLists.txt  run.sh.in
tests/old/kreyvium/: CMakeLists.txt  kreyvium.cxx  run.sh.in
tests/old/membership/: CMakeLists.txt  run.sh.in
tests/old/multiplicity/: CMakeLists.txt  run.sh.in
tests/old/sorting/: CMakeLists.txt  run.sh.in
tests/old/trivium/: CMakeLists.txt  README.md  run.sh.in
tests/old/wiretap/: CMakeLists.txt  README.md  run.sh.in  wiretap.cxx
tests/old_bfv/: CMakeLists.txt
tests/old_bfv/ASCII/: CMakeLists.txt
tests/old_bfv/flip/: CMakeLists.txt  flip.cxx
tests/old_bfv/intersection/: CMakeLists.txt
tests/old_bfv/kreyvium/: CMakeLists.txt  README.md  run.sh.in
tests/old_bfv/membership/: CMakeLists.txt
tests/old_bfv/multiplicity/: CMakeLists.txt
tests/old_bfv/sorting/: CMakeLists.txt  README.md
tests/old_bfv/trivium/: CMakeLists.txt  run.sh.in
tests/old_bfv/wiretap/: CMakeLists.txt
tests/sorting/: CMakeLists.txt  run.sh  sorting.cxx
tests/tfhe/: CMakeLists.txt  new_project.sh
tests/tfhe/_template/: CMakeLists.txt  encrypt.cxx  run.sh.in
tests/tfhe/banking/: CMakeLists.txt  banking.cxx  decrypt.cxx  encrypt.cxx  run.sh.in
tests/tfhe/hello/: CMakeLists.txt  decrypt.cxx  encrypt.cxx  hello.cxx  run.sh.in
tests/trivium/: CMakeLists.txt  run.sh  run.sh.in  trivium.cxx
tests/wiretap/: CMakeLists.txt  run.sh  run.sh.in  wiretap.cxx
(+113 files in other folders)
